[project]
name = "dpf_mrcfile"
description="A library for handling scientific volume and image-stack data like from .MAP .MRC .MRCS"
requires-python = ">=3.10"
authors = [{name = "Danny Farrell", email = "danpf@uw.edu"}]
dependencies = ["numpy>=1.22"]
version="1.0.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {package}/test"
