# If you already have [package] information in `Cargo.toml`, you can ignore
# this section!
[package]
# `name` here is name of the package.
name = "dpf-ssw-aligner-rspy"
# these are good defaults:
version = "1.0.0"
edition = "2021"

[package.metadata.maturin]
python-source = "src"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "dpf_ssw_aligner_rspy"

# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.20.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[build-dependencies]
pyo3-build-config = { version = "0.18.3", features = ["resolve-config"] }
